--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+/* kondisi awal: bener-bener invisible */
+.hidden-fade {
+  opacity: 0;
+  transform: translateX(-30px);
+  visibility: hidden;
+}
+
+/* animasi muncul */
+.animate-fade-in-left {
+  visibility: visible;
+  animation: fadeInLeft 0.6s ease forwards;
+}
